--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+<main class="container">
+          <section class="phone">
+                <iframe src="home.html" frameborder="0" name="tela " id="tela" >
+                </iframe>
+          </section>
+
+          <section class="redes-sociais">
+            
+          </section>
 
 
 
@@ -18,6 +26,16 @@
 
 
 
-  
+
+
+
+
+
+
+
+
+
+
+</main>
 </body>
 </html>
