--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
 <main class="container">
           <section class="phone">
                 <iframe src="home.html" frameborder="0" name="tela " id="tela" >
+                  O navegador não é compativel com este conteudo
                 </iframe>
           </section>
 
           <section class="redes-sociais">
             
+           <a href="#" target="tela" > <img src="imagens/logo-home.jpg" alt="home">  </a> 
+           <a href="#" target="tela" >  <img src="imagens/logo-youtube.jpg" alt="youtube"> </a> 
+           <a href="#" target="tela">  <img src="imagens/logo-github.jpg" alt="github"> </a> 
+           <a href="#" target="tela">  <img src="imagens/logo-twitter.jpg" alt="twitter">  </a>
+           <a href="#" target="tela">  <img src="imagens/logo-instagram.jpg" alt="voxmachina">   </a>
+           <a href="#" target="tela">  <img src="imagens/logo-facebook.jpg" alt="cats">   </a>
+
+
+
           </section>
 
 
