--- a/twiter.html
+++ b/twiter.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="socias.css">
 </head>
 <body>
-  <img src="imagens/tela-twitter.jpg" alt="twitter">
+  <img src="imagens/twitter.jpg" alt="twitter">
   <a href="https://twitter.com/MiguelL11294836">Acesse</a>
 
 
